Танца с бизнес слоем

--- a/Rent/RentBusinessLayer/RentBusinessLayer.csproj
+++ b/Rent/RentBusinessLayer/RentBusinessLayer.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Rent.DataAcess\Rent.DataAcess.csproj" />
     <ProjectReference Include="..\Rent_Dto\Rent_Dto.csproj" />
   </ItemGroup>
 
