--- a/Rent/Rent/Rent.csproj
+++ b/Rent/Rent/Rent.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RentBusinessLayer\RentBusinessLayer.csproj" />
+  </ItemGroup>
+
 </Project>
