--- a/Rent/RentBusinessLayer/RentBusinessLayer.csproj
+++ b/Rent/RentBusinessLayer/RentBusinessLayer.csproj
@@ -1,8 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="EPPlus" Version="4.5.3" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Rent.DataAcess\Rent.DataAcess.csproj" />
